set endorsed directory via command line so that users don't have to endorse for the whole VM in order to use the command line tools
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2578 ab3bd59b-922f-494d-bb5f-6f0a3c29deca